PreferenceServiceImpl菜单部分功能改进:黑名单和我喜欢的菜（对关联表进行改动）